--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 
     <!-- daisy ui and tailwind file cdn link -->
-    
+
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.3/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
 
@@ -36,7 +36,7 @@
     <!-- header section start from here -->
     <header>
         <!-- navigation bar start from here -->
-        <nav class="container mx-auto py-5 px-5 text-center">
+        <nav class="container mx-auto py-5 text-center">
             <div class="navbar bg-base-100">
                 <div class="navbar-start">
                     <div class="dropdown">
@@ -52,7 +52,7 @@
                             <li><a>Contact</a></li>
                         </ul>
                     </div>
-                    <h2><a class="btn btn-ghost text-3xl font-bold">Hockey’s</a></h2>
+                    <h2><a class="btn btn-ghost text-3xl font-bold sm:-pl-10">Hockey’s</a></h2>
                 </div>
                 <div class="navbar-center hidden lg:flex">
                     <ul class="menu menu-horizontal px-2 font-medium">
@@ -64,14 +64,19 @@
                     </ul>
                 </div>
                 <div class="navbar-end">
-                    <div><i class="fa-solid fa-magnifying-glass invisible lg:visible lg:mr-4 lg:cursor-pointer"></i></div>
-                    <a class="btn bg-primary-color px-7 text-white">Get Ticket</a>
+                    <div><i class="fa-solid fa-magnifying-glass invisible lg:visible lg:mr-4 lg:cursor-pointer"></i>
+                    </div>
+                    <a class="btn bg-primary-color w-[140px] text-white">Get Ticket</a>
                 </div>
             </div>
         </nav>
-
-
     </header>
+
+    <!-- banner section start from here -->
+
+    <!-- adding Carousel -->
+
+
 
 
     <main>
