--- a/index.html
+++ b/index.html
@@ -106,19 +106,94 @@
                     <a href="#slide1" class="btn btn-circle">❯</a>
                 </div>
             </div>
-            <div class="auto bg-gray-800 rounded-xl absolute  w-[335px] h-auto mt-[180px]  lg:w-[566px] lg:h-[165px] lg:ml-[570px] lg:mt-[350px]">
-                <h1 class="text-2xl text-white p-3 lg:pl-8 lg:pt-8 lg:pb-4 font-bold">Meet all the heroes from the field</h1>
-                <p class="text-emerald-300 p-3 lg:pl-8">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis
+            <div
+                class="invisible lg:visible auto bg-gray-800 rounded-xl absolute  w-[335px] h-auto mt-[180px]  lg:w-[566px] lg:h-[165px] lg:ml-[570px] lg:mt-[350px]">
+                <h1 class="text-2xl text-white p-3 lg:pl-8 lg:pt-8 lg:pb-4 font-bold">Meet all the heroes from the field
+                </h1>
+                <p class="text-emerald-300 p-3 lg:pl-8">Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+                    turpis
                     placerat dolor. Purus urna in sit nullam proin. </p>
             </div>
         </div>
 
-        
+
+
     </section>
+    <div class="visible lg:hidden auto bg-gray-800 rounded-xl w-[335px] mx-auto">
+        <h1 class="text-2xl text-white p-3 font-bold">Meet all the heroes from the field</h1>
+        <p class="text-emerald-300 p-3">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis
+            placerat dolor. Purus urna in sit nullam proin. </p>
+    </div>
 
-
+    <!-- main section start from here -->
 
     <main>
+
+        <!-- club details section -->
+
+        <!-- <section class="container mx-auto w-[335px] lg:w-[1170px]">
+            <div class="text-center lg:mt-24">
+                <h1 class="text-2xl lg:text-3xl font-bold mx-auto">Professional Hockeys Club</h1>
+                <p class="mx-auto text-neutral-700 text-sm mt-5">Dit amet consectetur. Condimentum dignissim adipiscing
+                    aliquam turpis placerat dolor. Purus urna in sit
+                    nullam proin. </p>
+            </div>
+
+            <div>
+                <i class="fa-solid fa-circle-notch fa-rotate-by fa-2xl" style="--fa-rotate-angle: 120deg;""></i>
+            </div>
+
+        </section> -->
+
+
+        <!-- program section start from here -->
+
+        <section class="container mx-auto mt-16 w-[335px] lg:w-[1170px]">
+            <div class="text-center mx-auto lg:mt-24 lg:mb-14">
+                <h1 class="text-2xl lg:text-4xl font-bold mx-auto">Programe Section</h1>
+                <p class="mx-auto text-neutral-700 mt-5">Dit amet consectetur. Condimentum dignissim adipiscing
+                    aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+            </div>
+
+            <div>
+                <div class="flex gap-6">
+                    <div class="hero lg:w-[573px] lg:h-[338px] " style="background-image: url(Images/2.png);">
+                        <div class="hero-overlay bg-opacity-60 rounded-2xl">
+                            <div class="mt-28 ml-10">
+                                <h1 class="text-white text-3xl font-bold mb-4">Junior Program</h1>
+                                <p class="text-white w-[480px] mb-4">Provident cupiditate voluptatem et in. Quaerat fugiat ut
+                                    assumenda
+                                    excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+                                <button class="btn btn-primary">Get Started</button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="hero lg:w-[573px] lg:h-[338px]" style="background-image: url(Images/3.png);">
+                        <div class="hero-overlay bg-opacity-60 rounded-2xl">
+                            <div class="mt-28 ml-10">
+                                <h1 class="text-white text-3xl font-bold mb-4">Teenager Program</h1>
+                                <p class="text-white w-[480px] mb-4">Provident cupiditate voluptatem et in. Quaerat fugiat ut
+                                    assumenda
+                                    excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+                                <button class="btn btn-primary">Get Started</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="hero lg:w-full lg:h-[450px] mt-6" style="background-image: url(Images/4.png);">
+                    <div class="hero-overlay bg-opacity-60 rounded-2xl">
+                        <div class="mt-56 ml-10">
+                            <h1 class="text-white text-3xl font-bold mb-4">Professional Program</h1>
+                            <p class="text-white w-[480px] mb-4">Provident cupiditate voluptatem et in. Quaerat fugiat ut
+                                assumenda
+                                excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+                            <button class="btn btn-primary">Get Started</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </main>
 
