--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
     <!-- main section start from here -->
 
-    <main>
+    <main class="container mx-auto w-full ">
 
         <!-- club details section -->
 
@@ -155,50 +155,57 @@
                     aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
             </div>
 
-            <div>
-                <div class="flex gap-6">
-                    <div class="hero lg:w-[573px] lg:h-[338px] " style="background-image: url(Images/2.png);">
-                        <div class="hero-overlay bg-opacity-60 rounded-2xl">
-                            <div class="mt-28 ml-10">
-                                <h1 class="text-white text-3xl font-bold mb-4">Junior Program</h1>
-                                <p class="text-white w-[480px] mb-4">Provident cupiditate voluptatem et in. Quaerat fugiat ut
-                                    assumenda
-                                    excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
-                                <button class="btn btn-primary">Get Started</button>
-                            </div>
+
+
+            <div class="mt-14">
+                <div class="grid grid-cols-1 lg:flex gap-6">
+                    <div class="rounded-xl hero flex-1 w-[335px] h-[244px] lg:w-[573px] lg:h-[338px]"
+                        style="background-image: url(Images/2.png);">
+                        <div class="rounded-xl hero-overlay "></div>
+                        <div class="rounded-xl text-white lg:mt-24">
+                            <h1 class="text-2xl font-bold">Junior Program</h1>
+                            <p class="text-sm w-[277px] lg:w-[490px] lg:mt-4">Dolor sit amet consectetur. Ut urna diam
+                                quis sagittis. Elit elit
+                                enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla.
+                                Tortor congue sed et in.</p>
+                            <a class="btn bg-primary-color w-[140px] text-white border-none mt-4">Get Ticket</a>
                         </div>
                     </div>
 
-                    <div class="hero lg:w-[573px] lg:h-[338px]" style="background-image: url(Images/3.png);">
-                        <div class="hero-overlay bg-opacity-60 rounded-2xl">
-                            <div class="mt-28 ml-10">
-                                <h1 class="text-white text-3xl font-bold mb-4">Teenager Program</h1>
-                                <p class="text-white w-[480px] mb-4">Provident cupiditate voluptatem et in. Quaerat fugiat ut
-                                    assumenda
-                                    excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
-                                <button class="btn btn-primary">Get Started</button>
+                    <div class="rounded-xl hero flex-1 w-[335px] h-[244px] lg:w-[573px] lg:h-[338px]"
+                        style="background-image: url(Images/3.png);">
+                        <div class="rounded-xl hero-overlay bg-opacity-60"></div>
+                        <div class="rounded-xl">
+                            <div class="rounded-xl text-white lg:mt-24">
+                                <h1 class="text-2xl font-bold">Junior Program</h1>
+                                <p class="text-sm w-[277px] lg:w-[490px] lg:mt-4">Dolor sit amet consectetur. Ut urna
+                                    diam quis sagittis. Elit elit
+                                    enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla.
+                                    Tortor congue sed et in.</p>
+                                <a class="btn bg-primary-color w-[140px] text-white border-none mt-4">Get Ticket</a>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="hero lg:w-full lg:h-[450px] mt-6" style="background-image: url(Images/4.png);">
-                    <div class="hero-overlay bg-opacity-60 rounded-2xl">
-                        <div class="mt-56 ml-10">
-                            <h1 class="text-white text-3xl font-bold mb-4">Professional Program</h1>
-                            <p class="text-white w-[480px] mb-4">Provident cupiditate voluptatem et in. Quaerat fugiat ut
-                                assumenda
-                                excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
-                            <button class="btn btn-primary">Get Started</button>
+                <div class="mt-6 rounded-xl hero w-[335px] h-[244px] lg:w-[1170px] lg:h-[440px]"
+                    style="background-image: url(Images/4.png);">
+                    <div class="rounded-xl hero-overlay bg-opacity-60"></div>
+                    <div class="rounded-xl">
+                        <div class="rounded-xl text-white ">
+                            <h1 class="text-2xl font-bold">Junior Program</h1>
+                            <p class="text-sm w-[277px] lg:w-[490px] lg:mt-4">Dolor sit amet consectetur. Ut urna
+                                diam quis sagittis. Elit elit
+                                enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla.
+                                Tortor congue sed et in.</p>
+                            <a class="btn bg-primary-color w-[140px] text-white border-none mt-4">Get Ticket</a>
                         </div>
                     </div>
                 </div>
             </div>
+
         </section>
-
     </main>
-
     <footer>
-
     </footer>
 
 </body>
