added new product section first row

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
     <!-- header section start from here -->
     <header>
         <!-- navigation bar start from here -->
-        <nav class="container mx-auto py-5 text-center sm:w-[335px] lg:w-[1170px]">
+        <nav class="container mx-auto text-center w-[335px] lg:w-[1170px]">
             <div class="navbar bg-base-100">
                 <div class="navbar-start">
                     <div class="dropdown">
-                        <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                        <div tabindex="0" role="button" class="btn-ghost lg:hidden">
                             <i class="fa-solid fa-bars text-2xl"></i>
                         </div>
                         <ul tabindex="0"
@@ -52,7 +52,7 @@
                             <li><a>Contact</a></li>
                         </ul>
                     </div>
-                    <h2><a class="btn btn-ghost text-3xl font-bold sm:-pl-10">Hockey’s</a></h2>
+                    <h2><a class="btn btn-ghost text-xl lg:text-3xl font-bold sm:-pl-10">Hockey’s</a></h2>
                 </div>
                 <div class="navbar-center hidden lg:flex">
                     <ul class="menu menu-horizontal px-2 font-medium">
@@ -66,7 +66,7 @@
                 <div class="navbar-end">
                     <div><i class="fa-solid fa-magnifying-glass invisible lg:visible lg:mr-4 lg:cursor-pointer"></i>
                     </div>
-                    <a class="btn bg-primary-color w-[140px] text-white">Get Ticket</a>
+                    <a class="btn bg-primary-color w-[100px] lg:w-[140px] text-white">Get Ticket</a>
                 </div>
             </div>
         </nav>
@@ -168,7 +168,7 @@
                                 quis sagittis. Elit elit
                                 enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla.
                                 Tortor congue sed et in.</p>
-                            <a class="btn bg-primary-color w-[140px] text-white border-none mt-4">Get Ticket</a>
+                            <a class="btn bg-primary-color w-[140px] text-white border-none mt-4">Register Now!</a>
                         </div>
                     </div>
 
@@ -177,12 +177,12 @@
                         <div class="rounded-xl hero-overlay bg-opacity-60"></div>
                         <div class="rounded-xl">
                             <div class="rounded-xl text-white lg:mt-24">
-                                <h1 class="text-2xl font-bold">Junior Program</h1>
+                                <h1 class="text-2xl font-bold">Teenager Program</h1>
                                 <p class="text-sm w-[277px] lg:w-[490px] lg:mt-4">Dolor sit amet consectetur. Ut urna
                                     diam quis sagittis. Elit elit
                                     enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla.
                                     Tortor congue sed et in.</p>
-                                <a class="btn bg-primary-color w-[140px] text-white border-none mt-4">Get Ticket</a>
+                                <a class="btn bg-primary-color w-[140px] text-white border-none mt-4">Register Now!</a>
                             </div>
                         </div>
                     </div>
@@ -191,18 +191,65 @@
                     style="background-image: url(Images/4.png);">
                     <div class="rounded-xl hero-overlay bg-opacity-60"></div>
                     <div class="rounded-xl">
-                        <div class="rounded-xl text-white ">
-                            <h1 class="text-2xl font-bold">Junior Program</h1>
+                        <div class="rounded-xl text-white lg:mt-44">
+                            <h1 class="text-2xl font-bold">Professional Program</h1>
                             <p class="text-sm w-[277px] lg:w-[490px] lg:mt-4">Dolor sit amet consectetur. Ut urna
                                 diam quis sagittis. Elit elit
                                 enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla.
                                 Tortor congue sed et in.</p>
-                            <a class="btn bg-primary-color w-[140px] text-white border-none mt-4">Get Ticket</a>
+                            <a class="btn bg-primary-color w-[140px] text-white border-none mt-4">Register Now!</a>
                         </div>
                     </div>
                 </div>
             </div>
+        </section>
 
+        <!-- new product section -->
+
+        <section class="container mx-auto mt-24 lg:w-[1170px] ">
+            <div class="container mx-auto lg:w-[1170px] text-center">
+                <h1 class="text-3xl font-bold">Our New Products</h1>
+                <p class="mt-8">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor.
+                    Purus urna in sit nullam proin. </p>
+            </div>
+
+            <!-- product section details -->
+
+
+            <div class="lg:flex mx-auto mt-20">
+
+                <!-- first column of new product -->
+                <div class="flex-1">
+                    <div class="hero ">
+                        <div class=" hero-content flex-col lg:flex-row w-[573px] h-[218px] border-slate-700 ">
+                            <img src="Images/5.png" class="max-w-sm rounded-lg shadow-2xl" />
+                            <div>
+                                <h1 class="text-2xl font-bold">Box Office News!</h1>
+                                <p class="">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi
+                                    exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+                                <button class="btn btn-primary">Get Started</button>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+                <!-- second column of new product -->
+
+                <div class="flex-1">
+                    <div class="hero ">
+                        <div class=" hero-content flex-col lg:flex-row w-[573px] h-[218px] border-slate-700 ">
+                            <img src="Images/5.png" class="max-w-sm rounded-lg shadow-2xl" />
+                            <div>
+                                <h1 class="text-2xl font-bold">Box Office News!</h1>
+                                <p class="">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi
+                                    exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+                                <button class="btn btn-primary">Get Started</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
