added new product section with responsive design

--- a/index.html
+++ b/index.html
@@ -187,11 +187,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="mt-6 rounded-xl hero w-[335px] h-[244px] lg:w-[1170px] lg:h-[440px]"
+                <div class="mt-6 bg-center bg-cover bg-no-repeat rounded-xl w-[335px] h-[244px] lg:w-[1170px] lg:h-[440px]"
                     style="background-image: url(Images/4.png);">
-                    <div class="rounded-xl hero-overlay bg-opacity-60"></div>
-                    <div class="rounded-xl">
-                        <div class="rounded-xl text-white lg:mt-44">
+                    <div class="rounded-xl hero-overlay bg-opacity-60">
+                        <div class="absolute mt-10 ml-7 lg:mt-56 lg:ml-12 rounded-xl text-white">
                             <h1 class="text-2xl font-bold">Professional Program</h1>
                             <p class="text-sm w-[277px] lg:w-[490px] lg:mt-4">Dolor sit amet consectetur. Ut urna
                                 diam quis sagittis. Elit elit
@@ -200,8 +199,8 @@
                             <a class="btn bg-primary-color w-[140px] text-white border-none mt-4">Register Now!</a>
                         </div>
                     </div>
+
                 </div>
-            </div>
         </section>
 
         <!-- new product section -->
@@ -214,40 +213,135 @@
             </div>
 
             <!-- product section details -->
+            <div class="lg:flex mt-20 lg:gap-6">
+                <!-- products first column -->
+                <div>
 
 
-            <div class="lg:flex mx-auto mt-20">
+                    <div class="mx-auto lg:flex p-6 mb-6 border-2 border-slate-300 rounded-xl w-[335px] h-[453px] lg:w-[573px] lg:h-[218px]">
+                        <img class="w-[300px] h-[210px] mx-auto lg:w-44 lg:h-44" src="Images/5.png" alt="">
+                        <div class="mt-4 lg:ml-5 lg:my-auto">
+                            <i class="fa-solid fa-star" style="color: #FFD43B;"></i> 5.00
+                            <i class="fa-solid fa-eye ml-5"></i>20
+                            <i class="fa-regular fa-heart ml-5"></i>200
+                            <h2 class="text-xl font-bold mb-3 mt-3">World Cup Jacket</h2>
+                            <p class="mb-3">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                            <div class="lg:flex items-center gap-8">
+                                <p class="font-bold text-orange-600">Price-$22.00</p>
+                                <div class="text-zinc-500">
+                                    <i class="fa-solid fa-cart-shopping"></i> Delivery Fee: Free
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
-                <!-- first column of new product -->
-                <div class="flex-1">
-                    <div class="hero ">
-                        <div class=" hero-content flex-col lg:flex-row w-[573px] h-[218px] border-slate-700 ">
-                            <img src="Images/5.png" class="max-w-sm rounded-lg shadow-2xl" />
-                            <div>
-                                <h1 class="text-2xl font-bold">Box Office News!</h1>
-                                <p class="">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi
-                                    exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
-                                <button class="btn btn-primary">Get Started</button>
+                    <div class="mx-auto lg:flex p-6 mb-6 border-2 border-slate-300 rounded-xl w-[335px] h-[453px] lg:w-[573px] lg:h-[218px]">
+                        <img class="w-[300px] h-[210px] mx-auto lg:w-44 lg:h-44" src="Images/6.png" alt="">
+                        <div class="mt-4 lg:ml-5 lg:my-auto">
+                            <i class="fa-solid fa-star" style="color: #FFD43B;"></i> 5.00
+                            <i class="fa-solid fa-eye ml-5"></i>20
+                            <i class="fa-regular fa-heart ml-5"></i>200
+                            <h2 class="text-xl font-bold mb-3 mt-3">World Cup Badge</h2>
+                            <p class="mb-3">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                            <div class="lg:flex items-center gap-8">
+                                <p class="font-bold text-orange-600">Price-$22.00</p>
+                                <div class="text-zinc-500">
+                                    <i class="fa-solid fa-cart-shopping"></i> Delivery Fee: Free
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="mx-auto lg:flex p-6 mb-6 border-2 border-slate-300 rounded-xl w-[335px] h-[453px] lg:w-[573px] lg:h-[218px]">
+                        <img class="w-[300px] h-[210px] mx-auto lg:w-44 lg:h-44" src="Images/7.png" alt="">
+                        <div class="mt-4 lg:ml-5 lg:my-auto">
+                            <i class="fa-solid fa-star" style="color: #FFD43B;"></i> 5.00
+                            <i class="fa-solid fa-eye ml-5"></i>20
+                            <i class="fa-regular fa-heart ml-5"></i>200
+                            <h2 class="text-xl font-bold mb-3 mt-3">World Cup Cap</h2>
+                            <p class="mb-3">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                            <div class="lg:flex items-center gap-8">
+                                <p class="font-bold text-orange-600">Price-$22.00</p>
+                                <div class="text-zinc-500">
+                                    <i class="fa-solid fa-cart-shopping"></i> Delivery Fee: Free
+                                </div>
                             </div>
                         </div>
                     </div>
 
                 </div>
 
-                <!-- second column of new product -->
-
-                <div class="flex-1">
-                    <div class="hero ">
-                        <div class=" hero-content flex-col lg:flex-row w-[573px] h-[218px] border-slate-700 ">
-                            <img src="Images/5.png" class="max-w-sm rounded-lg shadow-2xl" />
-                            <div>
-                                <h1 class="text-2xl font-bold">Box Office News!</h1>
-                                <p class="">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi
-                                    exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
-                                <button class="btn btn-primary">Get Started</button>
+                <!-- product second column -->
+                <div>
+                    <div class="mx-auto lg:flex p-6 mb-6 border-2 border-slate-300 rounded-xl w-[335px] h-[453px] lg:w-[573px] lg:h-[218px]">
+                        <img class="w-[300px] h-[210px] mx-auto lg:w-44 lg:h-44" src="Images/8.png" alt="">
+                        <div class="mt-4 lg:ml-5 lg:my-auto">
+                            <i class="fa-solid fa-star" style="color: #FFD43B;"></i> 5.00
+                            <i class="fa-solid fa-eye ml-5"></i>20
+                            <i class="fa-regular fa-heart ml-5"></i>200
+                            <h2 class="text-xl font-bold mb-3 mt-3">World Cup Jersey</h2>
+                            <p class="mb-3">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                            <div class="lg:flex items-center gap-8">
+                                <p class="font-bold text-orange-600">Price-$22.00</p>
+                                <div class="text-zinc-500">
+                                    <i class="fa-solid fa-cart-shopping"></i> Delivery Fee: Free
+                                </div>
                             </div>
                         </div>
                     </div>
+
+                    <div class="mx-auto lg:flex p-6 mb-6 border-2 border-slate-300 rounded-xl w-[335px] h-[453px] lg:w-[573px] lg:h-[218px]">
+                        <img class="w-[300px] h-[210px] mx-auto lg:w-44 lg:h-44" src="Images/9.png" alt="">
+                        <div class="mt-4 lg:ml-5 lg:my-auto">
+                            <i class="fa-solid fa-star" style="color: #FFD43B;"></i> 5.00
+                            <i class="fa-solid fa-eye ml-5"></i>20
+                            <i class="fa-regular fa-heart ml-5"></i>200
+                            <h2 class="text-xl font-bold mb-3 mt-3">World Cup Helmet</h2>
+                            <p class="mb-3">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                            <div class="lg:flex items-center gap-8">
+                                <p class="font-bold text-orange-600">Price-$22.00</p>
+                                <div class="text-zinc-500">
+                                    <i class="fa-solid fa-cart-shopping"></i> Delivery Fee: Free
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="mx-auto lg:flex p-6 mb-6 border-2 border-slate-300 rounded-xl w-[335px] h-[453px] lg:w-[573px] lg:h-[218px]">
+                        <img class="w-[300px] h-[210px] mx-auto lg:w-44 lg:h-44" src="Images/10.png" alt="">
+                        <div class="mt-4 lg:ml-5 lg:my-auto">
+                            <i class="fa-solid fa-star" style="color: #FFD43B;"></i> 5.00
+                            <i class="fa-solid fa-eye ml-5"></i>20
+                            <i class="fa-regular fa-heart ml-5"></i>200
+                            <h2 class="text-xl font-bold mb-3 mt-3">World Cup Football</h2>
+                            <p class="mb-3">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                            <div class="lg:flex items-center gap-8">
+                                <p class="font-bold text-orange-600">Price-$22.00</p>
+                                <div class="text-zinc-500">
+                                    <i class="fa-solid fa-cart-shopping"></i> Delivery Fee: Free
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+        </section>
+
+
+        <!-- Client Question Section -->
+
+        <section class="container mx-auto klg:w-[1170px]">
+            <div class="container mx-auto mt-16 lg:w-[1170px] text-center">
+                <h1 class="text-3xl font-bold">Our New Products</h1>
+                <p class="mt-8">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor.
+                    Purus urna in sit nullam proin. </p>
+            </div>
+    
+            <div>
+                <div>
+                    
                 </div>
             </div>
         </section>
