added social media section

--- a/index.html
+++ b/index.html
@@ -437,19 +437,18 @@
         <!-- Get in touch section -->
 
 
-        <section class="container mx-auto mt-16 w-[335px] lg:w-[1170px] lg:h-[764px]">
+        <section class="container mx-auto mt-16 w-[335px] lg:w-[1170px]">
             <div class="text-center mx-auto lg:mt-24 lg:mb-14">
                 <h1 class="text-2xl lg:text-4xl font-bold mx-auto">Get In Touch</h1>
                 <p class="mx-auto text-neutral-700 mt-5">Dit amet consectetur. Condimentum dignissim adipiscing
                     aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
             </div>
 
-            <div class="mx-auto mt-7 lg:flex lg:w-[1170px]">
+            <div class="mx-auto mt-7 lg:flex lg:w-[1170px] lg:h-[800px]">
 
                 <!-- get int touch first column -->
 
-                <div
-                    class="p-6 lg:p-12 border-2 border-emerald-100 rounded-xl h-[630px] w-[335px] lg:w-[474px] lg:h-[790px]">
+                <div class="p-6 lg:p-12 border-2 border-emerald-100 rounded-xl h-[630px] w-[335px] lg:w-[474px] lg:h-[790px]">
 
                     <div
                         class="p-6 mb-4 lg:mb-6 lg:p-8 w-[287px] h-[184px] lg:w-[374px] lg:h-[216px] bg-orange-50 rounded-xl">
@@ -478,7 +477,7 @@
                 </div>
                 <!-- get in touch second column -->
 
-                <div class="mt-6 lg:mt-0 lg:ml-6 gap-5 mx-auto w-[335px] lg:w-[672px]">
+                <div class="mt-6 lg:mt-0 lg:ml-6 gap-5 mx-auto w-[335px] lg:w-[672px] lg:h-[790px]">
 
 
                     <div class="lg:flex gap-8 lg:mb-6">
@@ -534,14 +533,19 @@
 
         </section>
 
-
         <!-- Social media section -->
 
-        <section class="lg:w-[1170px] lg:h-[150px] bg-green-50">
+        <section class="container mx-auto mt-16 w-[335px] lg:w-[1170px]">
+        <div class="w-[335px] h-[140px] lg:w-[1170px] lg:h-[150px] bg-green-50">
+           <div class="pt-10 lg:pt-12 flex flex-col items-center justify-center"> 
+            <h2 class="mb-4 text-xl font-bold">Social Media</h2>
+            <img src="Images/Social.png" alt="">
+           </div>
+        </div>
 
-        </section>
-
+    </section>
     </main>
+     
     <footer>
     </footer>
 
