fixed footer section

--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
 
 
             <div
-                class="mx-auto mt-20 p-8 lg:flex border-2 border-emerald-100 rounded-xl w-[335px] h-[670px] lg:w-[1170px] lg:h-[534px]">
+                class="mx-auto mt-20 p-8 lg:flex border-2 border-emerald-100 rounded-xl w-[335px] h-auto lg:w-[1170px] lg:h-[534px]">
 
                 <!-- client question image section -->
 
