fixed width of footer section

--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
 
 
 
-    <footer class="footer mt-20 p-10 bg-slate-900 text-slate-100">
+    <footer class="footer w-full mt-20 p-10 bg-slate-900 text-slate-100">
         <div class="lg:ml-32 lg:mt-28">
             <h1 class="text-3xl font-bold">Get In Touch</h1>
             <p class="w-[346px] lg:mt-6 lg:mb-6">These are the all way to contact with our club authority. You can easily get admit your child to securing the upcoming future in the hockey feild.</p>
