fixed height of footer

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 </head>
 
-<body class="w-full">
+<body>
     <!-- header section start from here -->
     <header>
         <!-- navigation bar start from here -->
